Mavryk Protocol integration

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="keywords" content="tezos, faucet, testnet, teztnet, ghostnet, mondaynet, dailynet, blockchain">
-  <meta name="description" content="Get Free Tez for Tezos Networks">
+  <meta name="keywords" content="mavryk, faucet, testnet, teztnet, ghostnet, mondaynet, dailynet, blockchain">
+  <meta name="description" content="Get Free Mav for Mavryk Networks">
   <link rel="shortcut icon" id="favicon" href="favicon.ico">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium+Web">
 
-  <title>Tezos Faucet</title>
+  <title>Mavryk Faucet</title>
 </head>
 
 <body>
