--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="mavryk, faucet, testnet, teztnet, ghostnet, mondaynet, dailynet, blockchain">
-  <meta name="description" content="Get Free Mav for Mavryk Networks">
+  <meta name="description" content="Get Free MVRK for Mavryk Networks">
   <link rel="shortcut icon" id="favicon" href="favicon.ico">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium+Web">
 
